--- a/Frontend/css/screen.css
+++ b/Frontend/css/screen.css
@@ -1231,6 +1231,35 @@ input:disabled {
     background-color: var(--global-color-alpha-dark);
 }
 
+/*
+    Component: countdown 3, 2, 1
+    ---
+    Countdown component
+*/
+
+.c-countdown {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--global-color-neutral-xxx-light);
+    display: none;
+}
+
+.c-countdown.is-visible {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (min-width: 768px) {
+    .c-countdown__animation {
+        transform: scale(1.5);
+    }
+}
+
+
 /*------------------------------------*\
 #UTILITIES
 \*------------------------------------*/
