feat: change text

--- a/Frontend/css/screen.css
+++ b/Frontend/css/screen.css
@@ -613,6 +613,7 @@ input:disabled {
     gap: 8px;
     width: 100%;
     justify-content: center;
+    margin-left: -32px;
 }
 
 .c-header__title {
@@ -667,7 +668,6 @@ input:disabled {
         gap: 8px;
         width: 100%;
         justify-content: center;
-        margin-right: 32px;
     }
 }
 
